# BlockBuildingGame

./: CMakeLists.txt  README.md
res/textures/: TextureAtlas.afphoto
src/: main.cpp
src/Engine/: Camera.cpp
src/Engine/Camera/: Camera.h  CameraController.cpp
src/Engine/OS/: WindowProcessing.cpp  WindowProcessing.h
src/Engine/OpenGL/: Texture2D.h
src/Engine/Render/: IndexBuffer.cpp  IndexBuffer.h  ShaderProgram.cpp  ShaderProgram.h  Texture2D.cpp  VertexArrayObject.cpp  VertexArrayObject.h  VertexBuffer.cpp  VertexBuffer.h
src/Engine/Render/Camera/: Camera.cpp  CameraController.h
src/Engine/Render/Objects/: Primitives.cpp  Primitives.h
src/Engine/Util/: FileIO.cpp  FileIO.h
src/Game/World/Objects/: BlockAtlas.cpp  BlockAtlas.h  BlockManager.cpp  BlockManager.h
src/Game/World/WorldGen/: Chunk.cpp  Chunk.h
